--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
       
     </script>
-    <img src="./Info-Graphic-2.png" onLoad="setupScroll"/>
+    <img src="./Info-Graphic-2.png" onload="setupScroll()"/>
     <img src="./Info-Graphic-2.png" />
     <img src="./Info-Graphic-2.png" />
     <img src="./Info-Graphic-2.png" />
